metadata/force-app/main/default/objects/CustomName_rmoPk__c/CustomName_rmoPk__c.object-meta.xml
<CustomObject>
    <description>Description_KXBfl</description>
    <label>CustomLabel_Mahnl</label>
    <nameField>
        <label>CustomLabel_Mahnl</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_Mahnls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>