metadata/force-app/main/default/objects/CustomName_rmoPk__c/fields/CustomField_uFEvh__c.field-meta.xml
<CustomField>
    <fullName>CustomField_uFEvh__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldiGyfO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>