metadata/force-app/main/default/objects/CustomName_rmoPk__c/fields/CustomField_ybkTF__c.field-meta.xml
<CustomField>
    <fullName>CustomField_ybkTF__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldlAMEN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>